--- a/libtenzir/CMakeLists.txt
+++ b/libtenzir/CMakeLists.txt
@@ -135,6 +135,12 @@ provide_find_module(libmaxminddb)
 find_package(c-ares REQUIRED)
 provide_find_module(c-ares)
 
+# -- mimalloc ------------------------------------------------------------------
+
+find_package(mimalloc REQUIRED CONFIG)
+string(APPEND TENZIR_FIND_DEPENDENCY_LIST "\nfind_package(mimalloc REQUIRED CONFIG)")
+dependency_summary("mimalloc" mimalloc "Dependencies")
+
 # -- libsystemd ----------------------------------------------------------------
 
 option(TENZIR_ENABLE_JOURNALD_LOGGING
@@ -270,6 +276,9 @@ endif ()
 target_link_libraries(libtenzir_builtins PRIVATE c-ares::cares)
 string(APPEND TENZIR_FIND_DEPENDENCY_LIST "\nfind_package(c-ares REQUIRED)")
 dependency_summary("c-ares" c-ares::cares "Dependencies")
+
+# Link against mimalloc.
+target_link_libraries(libtenzir PRIVATE mimalloc)
 
 # Link against xxHash.
 target_compile_definitions(
