Fix release title and improve existing changelog

--- a/changelog/releases/v5.16.0.yaml
+++ b/changelog/releases/v5.16.0.yaml
@@ -1,4 +1,4 @@
-title: "Stability improvements"
+title: "Stability Improvements"
 description: "This release brings forth stability improvements under high load that could cause platform unresponsiveness, fixes API request isolation problems, better kafka diagnostics and more."
 changes:
   - brand-remedy-meadow
