--- a/.gitmodules
+++ b/.gitmodules
@@ -30,3 +30,6 @@
 [submodule "plugins/web/aux/llhttp"]
 	path = plugins/web/aux/llhttp
 	url = https://github.com/nodejs/llhttp.git
+[submodule "libtenzir/aux/libcoro"]
+	path = libtenzir/aux/libcoro
+	url = https://github.com/jbaldwin/libcoro
