--- a/tenzir/CMakeLists.txt
+++ b/tenzir/CMakeLists.txt
@@ -1,10 +1,9 @@
 add_executable(tenzir tenzir.cpp operator_new.cpp malloc.cpp)
 TenzirTargetEnableTooling(tenzir)
 target_link_libraries(tenzir PRIVATE tenzir::internal tenzir::libtenzir)
+# Link mimalloc. Our malloc.cpp provides the malloc override, and due to link order
+# (our object files come first), our symbols take precedence over mimalloc's.
 target_link_libraries(tenzir PRIVATE mimalloc)
-if (TENZIR_ENABLE_JEMALLOC)
-  target_link_libraries(tenzir PRIVATE jemalloc::jemalloc_)
-endif ()
 TenzirTargetLinkWholeArchive(tenzir PRIVATE tenzir::libtenzir_builtins)
 add_executable(tenzir::tenzir ALIAS tenzir)
 
