--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -119,15 +119,15 @@ jobs:
           mv version.json.tmp version.json
 
           # Update package versions with uv
-          for package_dir in tenzir-core tenzir-operator tenzir; do
+          for package_dir in tenzir-common tenzir-operator tenzir; do
             uv --directory "python/${package_dir}" version --frozen "${VERSION_NUMBER}"
           done
 
           # Keep dependency constraints in sync with the new version
           UPPER_BOUND=$(uvx --from semver pysemver bump minor "${VERSION_NUMBER}")
 
-          uv --directory python add --package tenzir --frozen "tenzir-core>=${VERSION_NUMBER},<${UPPER_BOUND}"
-          uv --directory python add --package tenzir-operator --frozen "tenzir-core>=${VERSION_NUMBER},<${UPPER_BOUND}"
+          uv --directory python add --package tenzir --frozen "tenzir-common>=${VERSION_NUMBER},<${UPPER_BOUND}"
+          uv --directory python add --package tenzir-operator --frozen "tenzir-common>=${VERSION_NUMBER},<${UPPER_BOUND}"
 
           echo "Updated version.json with tenzir-version: ${VERSION_NUMBER}"
           echo "Updated Python package versions to: ${VERSION_NUMBER}"
