--- a/python/tenzir-common/pyproject.toml
+++ b/python/tenzir-common/pyproject.toml
@@ -1,9 +1,9 @@
 [build-system]
-requires = ["setuptools>=68", "wheel"]
-build-backend = "setuptools.build_meta"
+requires = ["uv_build>=0.8.14,<0.10.0"]
+build-backend = "uv_build"
 
 [project]
-name = "tenzir-core"
+name = "tenzir-common"
 version = "5.19.0"
 description = "Shared Python utilities for the Tenzir data pipeline"
 requires-python = ">=3.9"
